deployments/local-ai/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: local-ai
spec:
  hosts:
    - ai.erpf.de
  gateways:
    - local-ai
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 80
          host: local-ai
